--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "stage": "tsc && git status && git add ."
+    "stage": "tsc"
   },
   "keywords": [],
   "author": "",
